--- a/sass/drupal/_messages.sass
+++ b/sass/drupal/_messages.sass
@@ -1,8 +1,7 @@
 .messages
-  @extend .clearfix
+  @extend %clearfix
   background-color: #bedb82
   border-bottom: solid 1px rgba(137, 179, 51, 0.8)
-  line-height: 1.6
   padding: 20px
   + .messages
     border-top: none
