--- a/sass/utilities/_sprites.sass
+++ b/sass/utilities/_sprites.sass
@@ -1,3 +1,3 @@
-$base-spacing: 32px
-@import base/*.png
-$base: sprite-map("base/*.png")
+$base-icon-spacing: 32px
+@import base-icon/*.png
+$base: sprite-map("base-icon/*.png")
