--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* normalize.css 2012-03-11T12:53 UTC - http://github.com/necolas/normalize.css */
 /* =============================================================================
    HTML5 display definitions
@@ -190,7 +191,7 @@ code,
 kbd,
 samp {
   font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
+  _font-family: "courier new", monospace;
   font-size: 1em;
 }
 
@@ -324,7 +325,7 @@ form {
  * Define consistent border, margin, and padding
  */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -469,29 +470,81 @@ table {
   border-spacing: 0;
 }
 
-.clearfix, ul, nav ul, ol, nav ol {
+/* Symbolset
+   www.symbolset.com
+   Copyright © 2012 Oak Studios LLC
+*/
+@font-face {
+  font-family: "SSStandard";
+  src: url("../fonts/symbolset/ss-standard.eot");
+  src: url("../fonts/symbolset/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/symbolset/ss-standard.woff") format("woff"), url("../fonts/symbolset/ss-standard.ttf") format("truetype"), url("../fonts/symbolset/ss-standard.svg#SSStandard") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+a.tabledrag-handle:before {
+  font-family: "SSStandard";
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: none;
+  text-rendering: optimizeLegibility;
+  white-space: nowrap;
+  /*-webkit-font-feature-settings: "liga"; Currently broken in Chrome >= v22. Falls back to text-rendering. Safari is unaffected. */
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  -o-font-feature-settings: "liga";
+  font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
+html:hover a.tabledrag-handle:before {
+  -ms-zoom: 1;
+}
+
+a.tabledrag-handle:before {
+  content: "";
+}
+
+.clearfix {
   *zoom: 1;
 }
-.clearfix:after, ul:after, ol:after {
+.clearfix:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.inline-block, .indentation, .sort, .draggable a.tabledrag-handle {
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
+a.tabledrag-handle, a.tabledrag-handle:after, .indentation, .sort {
+  display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-}
-.inline-block, .indentation, .sort, .draggable a.tabledrag-handle {
+  zoom: 1;
   *display: inline;
 }
 
-.disabled {
-  cursor: not-allowed;
-  opacity: 0.5;
+.sort {
+  text-indent: -119988px;
+  overflow: hidden;
+  text-align: left;
+}
+
+#autocomplete ul {
+  list-style: none;
+}
+#autocomplete ul li {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+}
+
+a.tabledrag-handle, a.tabledrag-handle:after, .indentation, .sort {
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  zoom: 1;
+  *display: inline;
 }
 
 .visually-hidden, .element-invisible, .visuallyhidden {
@@ -514,19 +567,8 @@ table {
   width: auto;
 }
 
-.hidden {
-  display: none !important;
-  visibility: hidden;
-}
-
-.hide-text, .sort {
-  text-indent: 110%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.base-sprite, .indentation.tree-child, .indentation.tree-child-horizontal, .indentation.tree-child-last, .ascending, .descending, a.tabledrag-handle .handle, tr.drag a.tabledrag-handle .handle, a.tabledrag-handle-hover .handle {
-  background: url('../img/base-s8b859ec3e1.png') no-repeat;
+.base-icon-sprite, .indentation.tree-child, .indentation.tree-child-horizontal, .indentation.tree-child-last, .ascending, .descending {
+  background: url('../img/base-icon-s1fad3cd051.png') no-repeat;
 }
 
 #autocomplete {
@@ -536,8 +578,6 @@ table {
   z-index: 100;
 }
 #autocomplete ul {
-  list-style: none;
-  list-style-image: none;
   margin: 0;
   padding: 0;
 }
@@ -551,16 +591,15 @@ table {
 .js input.form-autocomplete {
   background: inherit url("../img/throbber.gif") no-repeat 100% 2px;
 }
-.js input.throbbing {
+.js input.form-autocomplete.throbbing {
   background-position: 100% -18px;
 }
-.js fieldset.collapsed {
-  border-bottom-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  height: 1em;
+
+.js [data-component="collapse"][data-state="closed"] > .content {
+  display: none;
 }
-.js fieldset.collapsed .fieldset-wrapper {
+
+.js [data-component="states"][data-state="closed"] {
   display: none;
 }
 
@@ -586,68 +625,38 @@ tr .ajax-progress .throbber {
   width: 16em;
 }
 
-fieldset.collapsible {
-  position: relative;
-}
-fieldset.collapsible .fieldset-legend {
-  display: block;
-}
-
 .resizable textarea {
   resize: vertical;
 }
 
-.indentation {
-  width: 20px;
-}
-.indentation.tree-child, .indentation.tree-child-horizontal {
-  background-position: 0 -823px;
-}
-.indentation.tree-child-last {
-  background-position: 0 -936px;
-}
-
-.ascending {
-  background-position: 0 -727px;
-  height: 16px;
-  width: 16px;
-}
-
-.descending {
-  background-position: 0 -775px;
-  height: 16px;
-  width: 16px;
-}
-
-th.active {
-  white-space: nowrap;
-}
-
-.draggable a.tabledrag-handle {
-  margin: 0 5px 0 0;
-  padding: 0;
+a.tabledrag-handle {
+  line-height: 1;
+  text-decoration: none;
   vertical-align: bottom;
 }
-
-a.tabledrag-handle, a.tabledrag-handle:hover, a.tabledrag-handle:focus, a.tabledrag-handle:active {
-  text-decoration: none;
+body.drag a.tabledrag-handle, a.tabledrag-handle:focus, a.tabledrag-handle:active {
+  cursor: all-scroll;
 }
-a.tabledrag-handle .handle {
-  background-position: 0 -343px;
-  height: 16px;
-  width: 16px;
-  margin-top: 0;
+a.tabledrag-handle, a.tabledrag-handle:after {
+  content: " ";
 }
-tr.drag a.tabledrag-handle .handle {
-  background-position: 0 -295px;
+td a.tabledrag-handle + .form-control, td a.tabledrag-handle + .form-component {
+  float: right;
 }
 
-a.tabledrag-handle-hover .handle {
-  background-position: 0 -487px;
+body.drag {
+  cursor: all-scroll;
 }
 
 tr.draggable td:first-child {
   white-space: nowrap;
+}
+
+tr.drag {
+  outline: 2px dashed rgba(0, 0, 0, 0.1);
+}
+tr.drag td {
+  border: 0;
 }
 
 a.tabledrag-toggle-weight {
@@ -655,10 +664,34 @@ a.tabledrag-toggle-weight {
 }
 
 .tabledrag-toggle-weight-wrapper {
-  font-size: 11px;
-  font-size: 0.6875rem;
   margin-bottom: 1em;
   text-align: right;
+}
+
+.indentation {
+  width: 20px;
+}
+.indentation.tree-child, .indentation.tree-child-horizontal {
+  background-position: 0 -911px;
+}
+.indentation.tree-child-last {
+  background-position: 0 -1024px;
+}
+
+.ascending {
+  background-position: 0 -815px;
+  height: 16px;
+  width: 16px;
+}
+
+.descending {
+  background-position: 0 -863px;
+  height: 16px;
+  width: 16px;
+}
+
+th.active {
+  white-space: nowrap;
 }
 
 table.sticky-header {
@@ -686,7 +719,7 @@ table.sticky-header {
   display: block;
 }
 
-* {
+*, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -699,9 +732,4 @@ img {
 }
 #map_canvas img {
   max-width: none;
-}
-
-ul, nav ul, ol, nav ol {
-  list-style: none;
-  padding: 0;
 }
