--- a/sass/drupal/_search.sass
+++ b/sass/drupal/_search.sass
@@ -1,30 +1,33 @@
-.block-search, .search-form
-  text-align: center
-  .container-inline
-    @extend .clearfix
-    @extend .inline-block
-    position: relative
-    width: 100%
-    max-width: 320px
-  input.form-text
-    float: left
-    height: 32px
-    padding-right: 36px
-    width: 100%
-  input.form-submit
-    background: inherit url('../img/icon/search.png') no-repeat 50% 50%
-    +reset-box-model
-    @extend .hide-text
-    border: none
-    height: 32px
-    width: 32px
-    position: absolute
-    top: 0
-    right: 0
-    z-index: 1
-    &:hover, &:focus, &:active
-      border: none
-      cursor: pointer
+// .block-search, .search-form
+//   form
+//     @extend %clearfix
+//     @extend %inline-block
+//     text-align: center
+//     position: relative
+//     width: 100%
+//     max-width: 320px
+//   input.form-text
+//     float: left
+//     height: 32px
+//     padding-right: 36px
+//     width: 100%
+//   input.form-submit
+//     +base-icon-sprite(search-white, true)
+//     +box-sizing(content-box)
+//     @extend %hide-text
+//     background-color: #111
+//     border: solid 8px #111
+//     margin: 0
+//     padding: 0
+//     position: absolute
+//     top: 1px
+//     right: 1px
+//     z-index: 1
+//     &:hover, &:focus, &:active
+//       +base-icon-sprite-position(search)
+//       background-color: #fff
+//       border-color: #fff
+//       cursor: pointer
 
-.search-form input.form-submit
-  top: 1.231em
+// .search-form input.form-submit
+//   top: 1.231em
