--- a/sass/drupal/_tabs.sass
+++ b/sass/drupal/_tabs.sass
@@ -2,25 +2,18 @@
 //------------------------------------------------------------------------------
 
 .tasks
-  @extend .clearfix
+  @extend %clearfix
   position: relative
-  min-height: 32px
-  * html &
-    height: 32px
-
-nav.tabs
-  margin: 16px 0
-  position: relative
-
+  a
+    text-decoration: none
 
 ul.tabs
-  @extend .clearfix
-  margin: 0
+  @extend %clearfix
+  margin: 20px 0
   padding: 0
 
 .tabs li
   float: left
-  height: 32px
   margin-bottom: 0
   padding: 0
 
@@ -32,116 +25,53 @@ ul.primary
   border-bottom: solid 1px #ddd
 
 .primary
-  a
-    background: #f5f5f5
-    border: solid 1px #ddd
-    border-width: 1px 1px 0 0
-    +box-sizing(content-box)
-    display: block
-    height: 31px
+  > li, a
     line-height: 32px
-    margin: 0
+    height: 32px
+  a.active
+    line-height: 36px
+    height: 36px
+    top: -3px
+  a
+    +link-colors($tab-foreground, $tab-active-foreground, $tab-active-foreground)
+    background-color: $tab-background
+    border: solid 1px $tab-border
+    border-width: 1px 1px 0 0
+    display: block
     padding: 0 20px
-    position: relative
-    &:hover, &:focus, &.active
+    &.active
+      border-color: $tab-active-border
       border-left-width: 1px
       border-radius: 2px 2px 0 0
-      height: 32px
-      margin: -4px 0 0 -1px
-      padding-top: 4px
-    &:hover,
-    &:focus
-      background-color: #eee
+      position: relative
+      margin: 0 0 0 -1px
+    &:hover, &:focus
+      background: $tab-active-background
     &.active
-      background: #fff
-  li:first-child a
-    border-width: 1px 1px 0 1px
-    border-radius: 2px 0 0 0
-    &.active
-      margin-left: 0
-      font-weight: bold
-  li:last-child a
-    border-radius: 0 2px 0 0
+      background: $background
 
-* html .primary a
-  float: left
+  > li
+    &:first-child a
+      border-width: 1px 1px 0 1px
+      border-radius: 2px 0 0 0
+      &.active
+        margin-left: 0
+    &:last-child a
+      border-radius: 0 2px 0 0
 
 
 // Secondary
 //------------------------------------------------------------------------------
 
 ul.secondary
-  +font-size(12)
-  padding: 1em 0
-
-.secondary
-  li
-    margin: 0 2px 0 0
+  border-bottom: solid 1px $tab-border
+  padding-bottom: 20px
   a
-    float: left
-    line-height: 30px
-    padding: 0 12px
-    width: auto
-    &:hover,
-    &:focus,
-    &.active
-      font-weight: bold
+    @extend %inline-block
+    +link-colors($tab-foreground, $tab-active-foreground, $tab-active-foreground)
+    border-radius: 3px
+    font-weight: bold
+    padding: 0 10px
+    margin: 0 2px 2px 0
+    text-transform: uppercase
 
-
-// Action links
-//------------------------------------------------------------------------------
-
-.actions
-  background-color: #111
-  border-radius: 3px 3px 0 0
-  position: absolute
-  top: -4px
-  right: 0
-  zoom: 1
-  .wrap
-    padding: 8px 16px
-
-ul.action-links
-  display: block
-  +reset-box-model
-  overflow: hidden
-  text-align: right
-  &:hover
-    z-index: 900
-
-.action-links
-  li
-    display: none
-    line-height: 1
-    margin: 0
-    padding: 0 8px 0 0
-    &:first-child,
-    &.first
-      @extend .inline-block
-  &:hover li,
-  .active &
-    display: block
-    margin-bottom: 4px
-  a
-    +link-colors(#fff)
-    @extend .inline-block
-    padding: 4px 0
-
-.actions-multiple
-  &:hover
-    border-radius: 4px
-  h2
-    @extend .hide-text
-    background: inherit url('../img/icon/white/select.png') no-repeat 50% 50%
-    margin: 0
-    padding: 0
-    position: absolute
-    right: 5px
-    top: 10px
-
-.actions-single
-  .action-links li
-    padding-right: 0
-    margin-bottom: 0
-  h2
-    @extend .visually-hidden
