--- a/sass/utilities/_variables.sass
+++ b/sass/utilities/_variables.sass
@@ -1,3 +1,5 @@
+@import design/variables
+
 // Compass
 //------------------------------------------------------------------------------
 
@@ -7,40 +9,69 @@ $experimental-support-for-khtml: false !default
 // Type
 //------------------------------------------------------------------------------
 
-$base-font-size: 16 !default
-$line-height: 1.4
+$base-size: 14px 40px
+$base-font-size: 16px
+$base-line-height: 20px
 
-$arial: Arial, sans-serif
-$helvetica: Helvetica, arial, sans-serif
-$verdana: Verdana, sans-serif
-$georgia: Georgia, sans-serif
-$monaco: Monaco, monospace, serif
+$arial: Arial, sans-serif !default
+$helvetica: Helvetica, arial, sans-serif !default
+$verdana: Verdana, sans-serif !default
+$georgia: Georgia, sans-serif !default
+$monaco: Monaco, monospace, serif !default
 
-$sans-serif: $helvetica
-$serif: $georgia
-$monospace: $monaco
+$sans-serif: $helvetica !default
+$serif: $georgia !default
+$monospace: $monaco !default
 
 
 // Colors
 //------------------------------------------------------------------------------
 
-$link: #4FB1D6 !default
-$hover: darken($link, 10%)
-$active: lighten($link, 10%)
-$visited: lighten($link, 5%)
-$focus: darken($link, 10%)
+$gray: #585858 !default
+$border: #eee !default
+$error: #c00 !default
 
-$gray: #585858
-$border: #eee
-$border-tabs: $border
-$error: #c00
+// Tabs
+$tab-background: #f5f5f5 !default
+$tab-border: #ddd !default
+$tab-foreground: #000 !default
+$tab-active-background: $background-color !default
+$tab-active-foreground: #000 !default
+$tab-active-border: #ddd !default
+
+// Breadcrumbs
+$breadcrumbs-text: $border !default
 
 
-// Grid
+// Buttons
 //------------------------------------------------------------------------------
 
-$total-columns: 12 !default
-$column-width: 60px !default
-$gutter-width: 20px !default
-$grid-padding: 20px !default
-$show-grid-backgrounds: false !default
+$btn-background: #222 !default
+$btn-foreground: #fff !default
+$btn-border: #333 !default
+$btn-hover-background: #222 !default
+$btn-hover-foreground: #fff !default
+$btn-hover-border: #333 !default
+
+$btn-secondary-background: #222 !default
+$btn-secondary-foreground: #fff !default
+$btn-secondary-border: $btn-secondary-background !default
+$btn-secondary-hover-background: #222 !default
+$btn-secondary-hover-foreground: #fff !default
+$btn-secondary-hover-border: $btn-secondary-background !default
+
+
+// Grid + Layout
+//------------------------------------------------------------------------------
+
+$min-width: 320px !default
+
+// Susy
+$total-columns: 12
+$column-width: 4em
+$gutter-width: 1.2em
+$grid-padding: 1.2em
+$show-grid-backgrounds: false
+
+// PageSlide
+$pageslide-width: 320px
