--- a/sass/design/_variables.sass
+++ b/sass/design/_variables.sass
@@ -23,10 +23,14 @@ $link-hover: darken($link, 10%)
 $link-active: lighten($link, 10%)
 
 
+$header-background: rgba(0,0,0,0.4)
+$footer-background: $header-background
+
+
 // Dark Theme
 //------------------------------------------------------------------------------
 
-$background-color: #272727
-$background: $background-color image-url('bg/debut_dark.png')
-$color: #ccc
-$heading-color: #fff
+// $background-color: #272727
+// $background: $background-color image-url('bg/debut_dark.png')
+// $color: #ccc
+// $heading-color: #fff
